--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -10,10 +10,13 @@
     "isolatedModules": true,
     "allowJs": false,
     "strict": true,
-    "noEmit": true
+    "composite": true,
+    "noEmit": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
+
+
 
 
