--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "~5.8.2"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "20.x",
     "pnpm": ">=8.0.0"
   },
   "packageManager": "pnpm@8.15.0"
