--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: corepack enable && corepack prepare pnpm@8.15.0 --activate && pnpm install --frozen-lockfile && pnpm run build
+    startCommand: node apps/web/server.js
     healthCheckPath: /
     envVars:
       - key: NODE_ENV
